# ha-windmill-integration

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/windmill/: __init__.py  api.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json
custom_components/windmill/translations/: en.json
docs/superpowers/plans/: 2026-06-04-windmill-hacs-integration.md
docs/superpowers/specs/: 2026-06-04-windmill-hacs-integration-design.md
scripts/: probe_windmill_api.py
tests/components/windmill/: test_api_client.py  test_climate.py  test_config_flow.py  test_manifest.py  test_probe_script.py  test_setup.py
tests/fixtures/windmill/: auth_failure.json  device_control_error.json  device_control_success.json  device_list.json  device_state.json
